overflow: visible on tabs to fix IE-specific overflow behavior

--- a/app/styles/overrides/paper-tabs.scss
+++ b/app/styles/overrides/paper-tabs.scss
@@ -1,6 +1,8 @@
 .md-tab {
   font-weight:400;
+  overflow: visible; // IE clips the tabs without this override
 }
+
 md-tabs.md-default-theme .md-tab,
 md-tabs .md-tab {
   color:#333;
